<resources>
    <string name="app_name">TechWear</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="your_new_password_must_be_unique_from_those_previously_used_ones">your new password must be unique from those previously used ones</string>
    <string name="back">Back</string>
    <string name="didn_t_receive_the_code_resend">Didn\'t receive the code? Resend</string>
    <string name="confirm_password">confirm_password</string>
    <string name="new_password">new_password</string>
    <string name="reset_password">reset_password</string>
    <string name="create_new_password">create_new_password</string>
    <string name="password_must_be_unique">password_must_be_unique</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="Signup">Sign up</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_verification_code_we_just_sent_to_your_email_address">Enter the verification code we just sent to your email address.</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password_">Confirm password</string>
    <string name="agree_and_register">Agree and Register</string>
    <string name="or_login_with">Or Login with</string>
    <string name="todo">TODO</string>
    <string name="arrrow">arrrow</string>
    <string name="welcome_back">Welcome back</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="_login">Login</string>
    <string name="_or_login_with">Or Login with</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="google_login">Google Login</string>
    <string name="apple_login">Apple Login</string>
    <string name="don_t_have_an_account_register_now">Don’t have an account? Register Now</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_apple">Login with Apple</string>
    <string name="_create_new_password">Create new password</string>
    <string name="your_new_password_must_be_unique_from_those_previously_used">Your new password must be unique from those previously used.</string>
    <string name="new_password_">New Password</string>
    <string name="confirm_password__">Confirm Password</string>
    <string name="reset_password__">Reset Password</string>
    <string name="forgot_password__">Forgot Password?</string>
    <string name="don_t_worry_it_occurs_please_enter_the_email_address_linked_with_your_account">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>
    <string name="enter_your_email___">Enter your email</string>
    <string name="send_code">Send Code</string>
    <string name="remember_password">Remember Password?</string>
    <string name="login__">Login</string>
    <string name="_91_6260379325">+91 6260379325</string>
    <string name="get_a_call">Get a call</string>
    <string name="md_alfahad">MD Alfahad</string>
    <string name="age_19">Age - 19</string>
    <string name="explore_now">Explore now</string>
    <string name="check_now">Check now</string>
    <string name="hospital">Hospital</string>
    <string name="call_now">Call now</string>
    <string name="police">Police</string>
    <string name="call_now_">Call now</string>
    <string name="location">Location</string>
    <string name="check_now_">Check now</string>
    <string name="banner">banner</string>
</resources>