<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <!-- Profile Section -->
    <ImageView
        android:id="@+id/profile_image"
        android:contentDescription="@string/banner"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/avatar"
        app:layout_constraintMarginStart="28dp"
        app:layout_constraintMarginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/md_alfahad"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintMarginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintTop_toTopOf="@id/profile_image" />

    <TextView
        android:id="@+id/user_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_19"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/user_name"
        app:layout_constraintTop_toBottomOf="@id/user_name" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="382dp"
        android:layout_height="187dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/roundedcorners"
        android:scaleType="fitCenter"
        android:src="@drawable/logo12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintMarginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/explore_button"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/explore_now"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintMarginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="211dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundedcorners"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toStartOf="@id/second_feature"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintMarginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/explore_button">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/heart_rate" />

        <TextView
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Heart Rate"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="129dp"
            android:layout_height="53dp"
            android:background="@drawable/buttonnnnn"
            android:text="@string/check_now"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_feature"
        android:layout_width="183dp"
        android:layout_height="213dp"
        android:background="@drawable/roundedcorners"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintMarginStart="8dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="357dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/hospit_al" />

        <TextView
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hospital"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:background="@drawable/buttonnnnn"
            android:text="@string/call_now"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_feature"
        android:layout_width="180dp"
        android:layout_height="221dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/roundedcorners"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintMarginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/second_feature"
        tools:ignore="UnknownId">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:src="@drawable/poli_ce" />

        <TextView
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/police"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="126dp"
            android:layout_height="48dp"
            android:background="@drawable/buttonnnnn"
            android:text="@string/call_now_"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourth_feature"
        android:layout_width="180dp"
        android:layout_height="221dp"
        android:background="@drawable/roundedcorners"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintMarginTop="8dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="602dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/loca_tion" />

        <TextView
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="126dp"
            android:layout_height="48dp"
            android:background="@drawable/buttonnnnn"
            android:text="@string/check_now_"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
