<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- Top Bar with Back Button -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="412dp"
        android:layout_height="105dp"
        android:background="#12C6CB"
        android:padding="16dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-2dp">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="37dp"
            android:layout_height="34dp"
            android:src="@drawable/navarroww"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="15dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/doctor_image"
        android:layout_width="397dp"
        android:layout_height="377dp"
        android:contentDescription="@string/first_fragment_label"
        android:scaleType="fitCenter"
        android:src="@drawable/frameeeee"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="149dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="295dp"
        android:layout_height="75dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/_91_6260379325"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="578dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/send_code_button"
        android:layout_width="174dp"
        android:layout_height="62dp"
        android:backgroundTint="#12C6CB"
        android:text="@string/get_a_call"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="668dp"
        tools:ignore="MissingConstraints,UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>
