<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="40dp"
    android:paddingTop="40dp"
    android:paddingRight="20dp"
    android:paddingLeft="20dp">


    <ImageView
        android:id="@+id/main_back_arrow"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:src="@drawable/back_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:fontFamily="@font/work_sans_bold"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_back"
        android:textColor="#000000"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/main_back_arrow"/>



    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/roundedcorners"
        android:hint="@string/enter_your_email"
        android:textSize="15sp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="100dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
        />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/roundedcorners"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/email_input"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="#808080"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:backgroundTint="#12C6CB"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <TextView
        android:id="@+id/or_login_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Or Login with"
        android:textColor="#808080"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text"
         />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="20dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/or_login_with">
    <ImageView
        android:id="@+id/facebook_login"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:background="@drawable/roundedcorners"
        android:contentDescription="Facebook Login"
        android:src="@drawable/facebook457"
        tools:layout_editor_absoluteX="248dp"
        tools:layout_editor_absoluteY="553dp" />

    <ImageView
        android:id="@+id/google_login"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:background="@drawable/roundedcorners"
        android:contentDescription="Google Login"
        android:src="@drawable/google567"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="553dp" />

    <ImageView
        android:id="@+id/apple_login"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:background="@drawable/roundedcorners"
        android:contentDescription="x"
        android:src="@drawable/google567"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="553dp" />


</LinearLayout>
    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don’t have an account? Register Now"
        android:textColor="#12C6CB"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
